--- a/src/app/OffBoarding/resignation-acceptance-letter/resignation-acceptance-letter.component.html
+++ b/src/app/OffBoarding/resignation-acceptance-letter/resignation-acceptance-letter.component.html
@@ -154,10 +154,18 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-lg-12 col-md-12">
+                                    <div class="p-2">
+                                        <img src="assets/styles/img/e-signature Merlin.png" alt=""  class="img-size-sign">
+                                    </div>
+                                </div>
+                            </div>
 
                             <div class="row ma-10">
                                 <div class="col-lg-12 col-md-12">
                                     <div class="p-2">
+                                        <h6 class="fs-14 font-type fw-semibold">Merlin Vathana</h6>
                                         <h6 class="fs-13 font-type fw-semibold">Human Resources Manager</h6>
                                     </div>
                                 </div>
